--- a/app/views/admin/categories/_modal.html.slim
+++ b/app/views/admin/categories/_modal.html.slim
@@ -1,4 +1,19 @@
-div class="modal fade" id="modalCreate" role="dialog" aria-labelledby="modalCreate" aria-hidden="true"
-  div class="modal-dialog" role="document"
-    div class="modal-content"
-      = render 'form', category: @category
+div class="modal-dialog" role="document"
+	div class="modal-content"
+    	= form_for @category, remote: true do |f|
+			  div class="modal-header"
+			    h5 class="modal-title" Add New Category
+			    button type="button" class="close" data-dismiss="modal" aria-label="Close"
+			      span aria-hidden="true" &times
+
+			  div class="modal-body"
+			    div.row
+			      div.col-md-12
+			        div.tile-body
+			          div.form-group
+			            = f.label :name
+			            = f.text_field :name, class: "form-control", placeholder: "Name Category"
+
+			  div class="modal-footer"
+			    button class="btn btn-secondary" data-dismiss="modal" type="button" Close
+			    = f.submit "Save changes", class: "btn btn-primary"
