--- a/app/views/admin/categories/edit.js.erb
+++ b/app/views/admin/categories/edit.js.erb
@@ -1,3 +1,3 @@
-$('#modal-category').html("<%= j render partial: 'edit' %>");
+$('#modal-category').html("<%= j render partial: 'modal' %>");
 $('.modal-title').text("Edit Category")
 $("#modal-category").modal('show');
