--- a/app/views/admin/categories/new.js.erb
+++ b/app/views/admin/categories/new.js.erb
@@ -1,2 +1,2 @@
-$('#modal-category').html("<%= j render 'new' %>")
+$('#modal-category').html("<%= j render 'modal' %>")
 $('#modal-category').modal('show')
