--- a/app/views/admin/products/edit.js.erb
+++ b/app/views/admin/products/edit.js.erb
@@ -1,3 +1,3 @@
-$('#modal-product').html("<% j render 'modal' %>");
+$('#modal-product').html("<%= j render partial: 'modal' %>");
 $('.modal-title').text("Edit Product");
 $('#modal-product').modal('show');
