--- a/app/views/admin/products/index.html.slim
+++ b/app/views/admin/products/index.html.slim
@@ -12,7 +12,7 @@
 			= link_to products_path do
 				| Product
 
-= link_to new_product_path, remote: true, class: 'btn btn-info' do
+= link_to new_product_path, remote: true, class: 'btn btn-info add-product' do
 	= fa_icon 'plus'
 	| New Product
 
